component-library/components/sections/contact-block/contact-block.scss
.c-contact-block {
    $c: &;
    //Colors added for demo only. Remove before merge.
    display: grid;
    grid-template-columns: var(--twelve-column-grid);
  
    &__content {
      padding: 6rem 0;
      grid-column: 2 / -2;
    }
  
    &__content-text {
      margin-bottom: 1.5rem;
      max-width: 32.0625rem;
      text-wrap: pretty;
    }
  
    &__content-wrapper {
      border-left: 0.0625rem solid var(--brand-grey-000);
      padding-left: 1.5rem;
      display:flex;
      flex-direction:column;
      gap:24px;

      .c-social-icons{
        justify-content:flex-start;
      }
    }

    &__contact-details{
        display:flex;
        flex-direction: column;
        gap: 8px;

        .c-labelled-icon{
            justify-content: flex-start;
        }
    }
  
    &__icons {
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
      flex-wrap: wrap;
      gap: 2.18rem;
      margin-bottom: 1.5rem;
    }
  
    &__buttons {
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
      flex-wrap: wrap;
      gap: 1rem;
    }
  
  
    &__map-wrapper {
      height: 700px;
      aspect-ratio: 1 / 1;
      width:700px;
      object-fit: cover;
      grid-column: 1 / -1;

      & > div{
        height:100%;
      }
    }
  
    // Desktop styles
    @media screen and (min-width: 1279px) {
      &__content {
        grid-column: 2 / 7;
        align-self: center;
      }
  
      &__map-wrapper {
        grid-column: 8 / -1;
      }
  
      &--right {
        #{$c}__content {
          grid-column: 9 / -2;
        }
  
        #{$c}__map-wrapper {
          grid-column: 1 / 8;
          grid-row: 1;
        }
      }
    }
  }
  

